--- a/3-gradient/index.html
+++ b/3-gradient/index.html
@@ -4,10 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/font-awesome.css">
 </head>
 <body>
-	<a class="circle-button"
-		 href="facebook-link"><i class="fa fa-facebook fa-2x"></i></a>
+	<div id="grad"></div>
 </body>
 </html>
