--- a/5-znacznik-listy/index.html
+++ b/5-znacznik-listy/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/font-awesome.css">
 </head>
+
 <body>
-	
+	<ul class="fa-ul">
+		<li><i class="fa-li fa fa-github"></i> - fa1</li>
+		<li><i class="fa fa-bitcoin"></i> - fa2</li>
+		<li><i class="fa fa-arrow-right"></i> - fa3</li>
+		<li><i class="fa fa-refresh"></i> - fa4</li>
+		<li><i class="fa fa-facebook"></i> - fa4</li>
+		<li><i class="fa-li fa fa-spinner fa-spin"></i> - fa4</li>
+		<li><i class="fa fa-circle-o-notch fa-spin"></i></li>
+		<li><i class="fa fa-refresh fa-spin"></i></li>
+		<li><i class="fa fa-cog fa-spin"></i></li>
+	</ul>
 </body>
+
 </html>
