--- a/2-okragly-przycisk/index.html
+++ b/2-okragly-przycisk/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>2-okragly-przycisk</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/font-awesome.css">
 </head>
