--- a/10-powiekszane-zdjecie/index.html
+++ b/10-powiekszane-zdjecie/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>10-powiekszenie-zdjecia</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	
+	<div class="container" id="box">
+		<img id="truskawka" src="img/owoc.jpg" alt="truskawka">
+	</div>
 </body>
 </html>
