--- a/9-stopka-przypieta/index.html
+++ b/9-stopka-przypieta/index.html
@@ -9,10 +9,16 @@
 
 <body>
 	<header class="h1">
-		SLAYER
+		NAGŁÓWEK
 	</header>
 	<div>
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto totam debitis quasi amet enim, excepturi, autem? Consectetur eveniet, quod officia omnis. Alias, ad nisi accusantium dolorum sunt veritatis, odio fugiat! 		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto totam debitis quasi amet enim, excepturi, autem? Consectetur eveniet, quod officia omnis. Alias, ad nisi accusantium dolorum sunt veritatis, odio fugiat!
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto totam debitis quasi amet enim, excepturi, autem? Consectetur eveniet, quod officia omnis. Alias, ad nisi accusantium dolorum sunt veritatis, odio fugiat!
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto totam debitis quasi amet enim, excepturi, autem? Consectetur eveniet, quod officia omnis. Alias, ad nisi accusantium dolorum sunt veritatis, odio fugiat!
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto totam debitis quasi amet enim, excepturi, autem? Consectetur eveniet, quod officia omnis. Alias, ad nisi accusantium dolorum sunt veritatis, odio fugiat!
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto totam debitis quasi amet enim, excepturi, autem? Consectetur eveniet, quod officia omnis. Alias, ad nisi accusantium dolorum sunt veritatis, odio fugiat!
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto totam debitis quasi amet enim, excepturi, autem? Consectetur eveniet, quod officia omnis. Alias, ad nisi accusantium dolorum sunt veritatis, odio fugiat!
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto totam debitis quasi amet enim, excepturi, autem? Consectetur eveniet, quod officia omnis. Alias, ad nisi accusantium dolorum sunt veritatis, odio fugiat!
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto totam debitis quasi amet enim, excepturi, autem? Consectetur eveniet, quod officia omnis. Alias, ad nisi accusantium dolorum sunt veritatis, odio fugiat!
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto totam debitis quasi amet enim, excepturi, autem? Consectetur eveniet, quod officia omnis. Alias, ad nisi accusantium dolorum sunt veritatis, odio fugiat!
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto totam debitis quasi amet enim, excepturi, autem? Consectetur eveniet, quod officia omnis. Alias, ad nisi accusantium dolorum sunt veritatis, odio fugiat!
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto totam debitis quasi amet enim, excepturi, autem? Consectetur eveniet, quod officia omnis. Alias, ad nisi accusantium dolorum sunt veritatis, odio fugiat!
@@ -33,9 +39,7 @@
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto totam debitis quasi amet enim, excepturi, autem? Consectetur eveniet, quod officia omnis. Alias, ad nisi accusantium dolorum sunt veritatis, odio fugiat!
 
 	</div>
-		<footer>
-			<p id = "copyright"> Copyright &#169; SLAYER</p>
-		</footer>	
+		<footer id = "footer"> stopka przypięta do dołu strony </footer>	
 </body>
 
 </html>
