--- a/5-znacznik-listy/index.html
+++ b/5-znacznik-listy/index.html
@@ -3,22 +3,22 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>5-znaczniki-listy</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/font-awesome.css">
 </head>
 
 <body>
 	<ul class="fa-ul">
-		<li><i class="fa-li fa fa-github"></i> - fa1</li>
-		<li><i class="fa fa-bitcoin"></i> - fa2</li>
-		<li><i class="fa fa-arrow-right"></i> - fa3</li>
-		<li><i class="fa fa-refresh"></i> - fa4</li>
-		<li><i class="fa fa-facebook"></i> - fa4</li>
-		<li><i class="fa-li fa fa-spinner fa-spin"></i> - fa4</li>
-		<li><i class="fa fa-circle-o-notch fa-spin"></i></li>
-		<li><i class="fa fa-refresh fa-spin"></i></li>
-		<li><i class="fa fa-cog fa-spin"></i></li>
+		<li><i class="fa-li fa fa-github"></i> - punkt 1</li>
+		<li><i class="fa fa-bitcoin"></i> - punkt 2</li>
+		<li><i class="fa fa-arrow-right"></i> - punkt 3</li>
+		<li><i class="fa fa-refresh"></i> - punkt 4</li>
+		<li><i class="fa fa-facebook"></i> - punkt 5</li>
+		<li><i class="fa-li fa fa-spinner fa-spin"></i> - punkt 6</li>
+		<li><i class="fa fa-circle-o-notch fa-spin"></i> - punkt 7</li>
+		<li><i class="fa fa-refresh fa-spin"></i> - punkt 8</li>
+		<li><i class="fa fa-cog fa-spin"></i> - punkt 9</li>
 	</ul>
 </body>
 
